--- a/cupcake.css
+++ b/cupcake.css
@@ -1,3 +1,53 @@
 body {
   background-color: pink;
 }
+
+/* these style attributes apply to all h1 elements*/
+h1 {
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+  color: #A80000;
+  font-family: cursive;
+  font-size: 72px;
+  text-align: center;
+  /* background-color: rgb(150,100,100); */
+}
+
+img,
+p {
+  width: 50%;
+  max-width: 500px;
+  min-width: 350px;
+  margin: 0 auto 0 auto;
+}
+
+img {
+
+  height: auto;
+  display: block;
+}
+
+p {
+  margin-top: 2em;
+  font-family: fantasy;
+}
+
+a {
+  margin: 2em auto 4em auto;
+  display: table;
+  color: white;
+  font-family: "Arial", sans-serif;
+  text-trasnform: uppercase;
+  text-decoration: none;
+  padding: 0.5em;
+  background-color: rgb(150,150,150);
+}
+
+a:hover {
+  background-color: rgb(200,200,200);
+}
+
+a:active {
+  background-color: purple;
+}
